<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/locate"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="locate"
        android:text="@string/principal_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/scan"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="scan"
        android:layout_below="@+id/locate"
        android:text="@string/scan_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/save"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"

        android:text="@string/secundary_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/deletedb"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="deleteDB"
        android:text="@string/delete_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <EditText
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/deletedb"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:hint="X , Y , Z"
        android:gravity="center"
        android:layout_marginTop="14dp" />

    <ScrollView
        android:layout_width="326dp"
        android:layout_height="278dp"
        android:layout_below="@+id/position"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/display"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>

</RelativeLayout>