<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ImageActivity"
    tools:showIn="@layout/activity_image">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:src="@drawable/planta" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="32dp"
        android:layout_height="33dp"


        android:layout_marginLeft="320dp"
        android:layout_marginTop="95dp"

        android:layout_marginRight="56dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/button" />
    <Button
    android:id="@+id/locate2"
    style="@style/Widget.AppCompat.Button.Borderless.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/imageView"
    android:onClick="locateAgain"
    android:text="@string/page2_principal_button"
    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/sync"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/locate2"
        android:onClick="sync"
        android:text="@string/sync_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/sync"
        android:onClick="goBack"
        android:text="@string/back_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />


</RelativeLayout>